# oa2

./: .gitignore  Cargo.toml  Makefile  README.md  compose.yaml  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
api-server/: Cargo.toml
api-server/db/migrations/: 20240518192405.sql
api-server/src/: main.rs
api-spec/: .gitignore  build.js  package.json
api/server/: Cargo.toml
api/server/db/: add_migration  schema.sql
api/server/src/: get_user.rs  main.rs  test_utils.rs
api/spec/: main.tsp  package.json  pnpm-lock.yaml
client/: package.json  pnpm-lock.yaml
client/src/: App.tsx  index.css  index.tsx
web/: .gitignore  package.json  vite.config.ts
web-server/: biome.json  eslint.config.js  index.html  package.json
web-server/src/: App.tsx  NotFound.tsx  app.tsx  entry-client.tsx  index.tsx
web-server/src/components/: navbar.tsx
web-server/src/routes/: about.tsx
web/src/: index.tsx
web/src/routes/: index.tsx
